# Swavigator

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  package.sh  run-bundle.sh  run.sh
.github/workflows/: release.yml
scripts/: process_icon.py
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  commands.rs  lib.rs  logging.rs  main.rs  navigator.rs  spaces.rs  storage.rs  windows.rs
src-tauri/src/apps/: discovery.rs  dock.rs  lifecycle.rs  mod.rs  open.rs
src-tauri/src/commands/: app_discovery.rs  context_menu.rs  dock.rs  mod.rs
src-tauri/src/navigator/: cgs.rs  close.rs  mod.rs  navigate.rs
src/components/: AppGroupCard.tsx  AppIcon.tsx  AppPicker.tsx  AppPickerWindow.tsx  AppTray.tsx  FloatingPanel.tsx  SettingsWindow.tsx  SpaceCard.tsx  WindowItem.tsx
src/components/AppPickerWindow/: index.tsx
src/components/AppPickerWindow/components/: AppList.tsx  Footer.tsx  UrlInputRow.tsx
src/components/AppPickerWindow/hooks/: useAddHandlers.ts  useAppPicker.ts
src/components/FloatingPanel/: constants.ts  index.tsx
src/components/FloatingPanel/components/: CompactView.tsx  HorizontalLayout.tsx  MinimizedSection.tsx  SearchBar.tsx  TitleBar.tsx  VerticalLayout.tsx
src/components/SettingsWindow/: index.tsx
src/components/TodoWindow/: RichTextEditor.tsx  index.tsx
src/hooks/: useAppGroups.ts  useAppIcons.ts  useHotkeys.ts  useSpaceState.ts
src/lib/: log.ts  types.ts
src/styles/: globals.css
(+9 files in other folders)
